# sc-acopf-viz

./: README.md  pyproject.toml
Postprocessing_4_ExaJuGo/: Extract_Solution_data.ipynb  Monument_WF.ipynb
Preprocessing_4_ExaJuGo/: Make_con_file.ipynb  SD_study.ipynb  case_Eaton.con  case_Monument.con
WF_tools/: __init__.py  con_file_functions.py  make_fig_funtions.py  parse_data.py  required_funtions.py  sc_acopf_viz.py  validation_functions.py
grids/California/: California_line_circuits.csv  California_transformer.csv
wildfires/Eaton/: ca-eaton_20250109_0309_07_017412_05_elm.dbf  ca-eaton_20250109_0309_07_017412_05_elm.shp  ca-eaton_20250109_0309_07_017412_05_elm.shx  ca-eaton_20250109_0309_07_017892_01_elm.dbf  ca-eaton_20250109_0309_07_017892_01_elm.shp  ca-eaton_20250109_0309_07_017892_01_elm.shx  ca-eaton_20250109_0309_07_019030_10_elm.dbf  ca-eaton_20250109_0309_07_019030_10_elm.shp  ca-eaton_20250109_0309_07_019030_10_elm.shx  ca-eaton_20250109_0309_07_020718_20_elm.dbf  ca-eaton_20250109_0309_07_020718_20_elm.shp  ca-eaton_20250109_0309_07_020718_20_elm.shx  ca-eaton_20250109_0309_07_023953_40_elm.dbf  ca-eaton_20250109_0309_07_023953_40_elm.shp  ca-eaton_20250109_0309_07_023953_40_elm.shx  ca-eaton_20250109_0309_07_024880_30_elm.dbf  ca-eaton_20250109_0309_07_024880_30_elm.shp  ca-eaton_20250109_0309_07_024880_30_elm.shx  ca-eaton_20250109_0309_07_027134_70_elm.dbf  ca-eaton_20250109_0309_07_027134_70_elm.shp  ca-eaton_20250109_0309_07_027134_70_elm.shx  ca-eaton_20250109_0309_07_027460_60_elm.dbf  ca-eaton_20250109_0309_07_027460_60_elm.shp  (+22 more)
(+29 files in other folders)
