[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WF_tools"
version = "0.1.0"
description = "Tools for wildfire-aware SCACOPF analysis and visualization"
authors = [
  { name="Irabiel Romero", email="iromeroruiz@ucmerced.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "matplotlib>=3.4",
  "geopandas>=0.10",
  "contextily>=1.1",
  "shapely>=1.7"
]
